--- a/villa_los_reyes/src/components/menu/arrow.css
+++ b/villa_los_reyes/src/components/menu/arrow.css
@@ -1,12 +1,12 @@
 .arrow-drop-down-screen{
-    height: 24px;
+    height: 25px;
     position: relative;
-    width: 24;
+    width: 70px;
 }
 .arrow-drop-down-screen .icon{
-    height: 5px;
-    left: 7px;
+    height: 25;
+    left: 0px;
     position: absolute;
-    top: 10px;
-    width: 10px;
+    top: 0px;
+    width: 25px;
 }
