--- a/villa_los_reyes/src/components/menu/languaje.css
+++ b/villa_los_reyes/src/components/menu/languaje.css
@@ -1,4 +1,5 @@
 .options-default {
+    background-color: #003e2e;
     align-items: flex-start;
     display: flex;
     flex-direction: column;
@@ -54,8 +55,8 @@
   }
   
   .options-default .arrow-drop-down {
-    height: 24px !important;
-    position: relative !important;
-    width: 24px !important;
+    height: 24px;
+    position: relative;
+    width: 24px;
   }
   
