--- a/villa_los_reyes/src/components/menu/MenuButton.css
+++ b/villa_los_reyes/src/components/menu/MenuButton.css
@@ -1,36 +1,22 @@
-.tabs {
-    align-items: flex-start;
-    display: inline-flex;
+.tab {
+    display: flex;
+    height: auto;
     flex-direction: column;
-    height: 56px;
-    position: relative;
-}
-
-.tabs .tab {
-    align-items: center;
-    background-color: #003e2e;
-    display: inline-flex;
-    flex-direction: column;
-    height: 56px;
     justify-content: flex-end;
-    padding: 0px 8px;
-    position: relative;
+    align-items: center;
 }
 
-.tabs .state-layer {
+.tab .state-layer {
+    display: flex;
+    padding: 0px 16px;
+    flex-direction: column;
+    justify-content: flex-end;
     align-items: center;
     align-self: stretch;
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-    flex-grow: 1;
-    justify-content: flex-end;
-    padding: 0px 16px;
-    position: relative;
-    width: 100%;
+    cursor: pointer;
 }
 
-.tabs .tab-contents {
+.tab .tab-contents {
     align-items: center;
     display: inline-flex;
     flex: 1;
@@ -41,52 +27,37 @@
     position: relative;
 }
 
-.tabs .label{
-    color: rgba(231, 255, 242, 1);
-    font-family: 'Poppins', Helvetica;
+.tab .label{
+    color: var(--Schemes-Surface, #F5FBF6);
+    text-align: center;
+    /* M3/label/medium */
+    font-family: Poppins;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
+    line-height: 20px; /* 125% */
     letter-spacing: 0.5px;
-    line-height: 20px;
-    margin-bottom: -4.00px;
-    margin-top: -6.00px;
-    position: relative;
-    text-align: center;
-    width: fit-content;
 }
 
-.tabs .text-wrapper{
-    color: rgba(244, 149, 22, 1);
-    font-family: 'Poppins', Helvetica;
+.tab .text-wrapper{
+    color: var(--M3-ref-secondary-secondary70, #F49516);
+    text-align: center;
+    /* M3/label/medium */
+    font-family: Poppins;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
+    line-height: 20px; /* 125% */
     letter-spacing: 0.5px;
-    line-height: 20px;
-    margin-bottom: -4.00px;
-    margin-top: -6.00px;
-    position: relative;
-    text-align: center;
-    width: fit-content;
 }
 
-.tabs .indicator {
+.tab .indicator {
+    width: 100%;
     height: 14px;
-    left: 0;
     position: absolute;
-    top: 42px;
-    width: 126;
+    object-fit: contain;
+    bottom: 0px;
 }
 
-.tabs .shape{
-    background-color: rgba(244, 149, 22, 1);
-    border-radius: 100px 100px 0px 0px;
-    height: 3px;
-    left: -5px;
-    position: relative;
-    top: 11px;
-    width: 122px;
-}
 
 
