button transition change

--- a/villa_los_reyes/src/components/buttons/buttons.css
+++ b/villa_los_reyes/src/components/buttons/buttons.css
@@ -10,6 +10,7 @@
   background: var(--M3-ref-secondary-secondary70, #F49516);
   height: 45px;
   cursor: pointer;
+  transition: all 0.3s ease;
 }
 
 .yellow-buttom:hover{
